--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-coffee": "~0.8.0",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-sass": "~0.6.0"
+    "grunt-contrib-sass": "~0.6.0",
+    "grunt-contrib-connect": "~0.6.0"
   }
 }
