--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grunt-contrib-coffee": "~0.8.0",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-sass": "~0.6.0",
-    "grunt-contrib-connect": "~0.6.0"
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-release": "~0.6.0"
   }
 }
