--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-coffee": "~0.8.0",
     "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-sass": "~0.6.0",
     "grunt-contrib-connect": "~0.6.0",
-    "grunt-release": "~0.6.0"
+    "grunt-release": "~0.6.0",
+    "grunt-contrib-less": "~0.8.3"
   }
 }
