--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-qunit": "~0.3.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-coffee": "~0.8.0",
+    "grunt-coffeelint": "~1.0.3",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-connect": "~0.6.0",
     "grunt-release": "~0.6.0",
