--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "grunt": "~0.4.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-coffee": "~0.8.0",
-    "grunt-coffeelint": "~1.0.3",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-connect": "~0.6.0",
     "grunt-release": "~0.6.0",
-    "grunt-contrib-less": "~0.8.3"
+    "grunt-contrib-less": "~0.8.3",
+    "q": "~1.0.0",
+    "grunt-liquid": "0.0.3"
   }
 }
