--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grunt-release": "~0.6.0",
     "grunt-contrib-less": "~0.8.3",
     "q": "~1.0.0",
-    "grunt-liquid": "0.0.3"
+    "grunt-liquid": "0.0.3",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
