--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "status-page",
-  "version": "0.1.0",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-connect": "~0.6.0",
-    "grunt-release": "~0.6.0",
     "grunt-contrib-less": "~0.8.3",
-    "q": "~1.0.0",
-    "grunt-liquid": "0.0.3",
-    "grunt-contrib-copy": "~0.5.0"
+    "grunt-sorry-theme-deploy": "0.1.1",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
