--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-contrib-less": "~0.8.3",
     "grunt-sorry-theme-deploy": "1.0.0",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-release": "^0.7.0"
+    "grunt-release": "^0.7.0",
+    "grunt-contrib-clean": "^0.5.0"
   }
 }
