Added minification for our new JS assets.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-sorry-theme-deploy": "1.0.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-release": "^0.7.0",
-    "grunt-contrib-clean": "^0.5.0"
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-uglify": "^0.5.1"
   }
 }
